[package]
name = "lesbians"
version = "0.1.0"
authors = ["iliana weller <ilianaw@buttslol.net>"]
license = "AGPL-3.0-only"
edition = "2018"
publish = false

[profile.release]
lto = true
debug = true

[dependencies]
deunicode = "1.0"
env_logger = "0.6"
failure = "0.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.18"
structopt = "0.2"
tantivy = "0.8"
