[package]
name = "lesbians"
version = "0.1.0"
authors = ["iliana weller <ilianaw@buttslol.net>"]
license = "AGPL-3.0-only"
edition = "2018"
publish = false

[profile.release]
lto = true
debug = true

[dependencies]
deunicode = "1.0"
env_logger = "0.6"
failure = "0.1"
lazy_static = "1.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.9"
serde_json = "1.0"
sled = "0.19"
structopt = "0.2"
tantivy = "0.8"
