[package]
name = "lesbians"
version = "0.1.0"
authors = ["iliana destroyer of worlds <iliana@buttslol.net>"]
license = "AGPL-3.0-only"
edition = "2018"
publish = false

[profile.release]
lto = true
debug = true

[dependencies]
deunicode = "1.0.0"
env_logger = "0.6.1"
failure = "0.1.5"
lazy_static = "1.3.0"
log = "0.4.6"
serde = { version = "1.0.90", features = ["derive"] }
serde_cbor = "0.9.0"
serde_json = "1.0.39"
serde_plain = "0.3.0"
sled = "0.23.0"
structopt = "0.2.15"
tantivy = "0.9.1"
